feat: search product by keywword refer to St-179
